# sort_collections

./: .gitignore  CMakeLists.txt  bubble.c  config.h  crossline.c  crossline.h  global.h  main.c  prepare.c  timer.c  timer.h  utils.c
collections/: bubble.c  direct_insertion.c  half_insertion.c  heap_sort.c  merge_sort.c  quick_sort.c  simple_selection.c
